Cleaning Up Code & Documenting

--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -123,23 +123,22 @@
                     </div>
                 </div>
 
-                <div class="info-card-two">
+                <!-- <div class="info-card-two">
                     <div class="info-flex">
                         <div class="card-two-img"></div>
                         <div class="info-card-two-content">
-                            <h5>Mark Dargie</h5>
+                            <h5>{{user.email}}</h5>
                             <small>Card Information</small>
     
                         </div>
                     </div>
                     <div class="text-center">
                         <button>
-                            <span class="ti-gift"></span>
                             Clear Payment
                         </button>
                     </div>
 
-                </div>
+                </div> -->
             </div>
 
         </div>
