--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.css
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.css
@@ -1,475 +1,455 @@
-@import url('../sidebar/sidebar.component.css');
+@import url("../sidebar/sidebar.component.css");
 
-h1, h2, h3, h4, h5, p {
-    color: var(--dashboard-text);
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  color: var(--dashboard-text);
 }
 
-.dashboard-container{
-    font-size:20px;
+.dashboard-container {
+  font-size: 20px;
 }
 
-#sidebar-toggle{
-    display: none;
+#sidebar-toggle {
+  display: none;
 }
 
-#sidebar-toggle:checked ~ .sidebar{
-    width: 60px;
+#sidebar-toggle:checked ~ .sidebar {
+  width: 60px;
 }
 
-#sidebar-toggle:checked ~ .dashboard-content{
-    margin-left: 60px;
+#sidebar-toggle:checked ~ .dashboard-content {
+  margin-left: 60px;
 }
 
-#sidebar-toggle:checked ~ .dashboard-container{
-    margin-left: 60px;
-    left:60px;
+#sidebar-toggle:checked ~ .dashboard-container {
+  margin-left: 60px;
+  left: 60px;
 }
 
 #sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
-#sidebar-toggle:checked ~ .sidebar li span:last-child{
-    display: none;
-
+#sidebar-toggle:checked ~ .sidebar li span:last-child {
+  display: none;
 }
 
 #sidebar-toggle:checked ~ .sidebar .sidebar-header,
-#sidebar-toggle:checked ~ .sidebar li{
-    display: flex;
-    justify-content: center;
-
+#sidebar-toggle:checked ~ .sidebar li {
+  display: flex;
+  justify-content: center;
 }
 
-#sidebar-toggle:checked ~ .dashboard-content header{
-    left: 60px;
+#sidebar-toggle:checked ~ .dashboard-content header {
+  left: 60px;
 }
 
-
-
-.sidebar{
-    height: 100%;
-    width: 240px;
-    left:0;
-    top:0;
-    z-index: var(--z-fixed);
-    position: fixed;
-    background: var(--dashboard-sidebar);
-    color:#efefef;
-    padding: 1rem;
-    overflow-y: auto;
-    transition: width 500ms;
+.sidebar {
+  height: 100%;
+  width: 240px;
+  left: 0;
+  top: 0;
+  z-index: var(--z-fixed);
+  position: fixed;
+  background: var(--dashboard-sidebar);
+  color: #efefef;
+  padding: 1rem;
+  overflow-y: auto;
+  transition: width 500ms;
 }
 
-.sidebar-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height:60px;
-    padding: 0rem 1rem;
-    margin-bottom: 20px;
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 60px;
+  padding: 0rem 1rem;
+  margin-bottom: 20px;
 }
 
-.side-logo{
-    color:#fff;
+.side-logo {
+  color: #fff;
 }
 
-.sidebar-menu{
-    padding:1rem;
+.sidebar-menu {
+  padding: 1rem;
 }
 
 .sidebar li {
-    margin-bottom: 4.5rem;
+  margin-bottom: 4.5rem;
 }
 
 .sidebar a {
-    color:#fff;
-    font-size: 1.8rem;
-    letter-spacing: .5px;
+  color: #fff;
+  font-size: 1.8rem;
+  letter-spacing: 0.5px;
 }
 
 /* .sidebar li:first-child a {
     background: rgba(0,0,0,0.7);
 } */
 
-.sidebar a span:first{
-    color:var(--dashboard-text);
+.sidebar a span:first {
+  color: var(--dashboard-text);
 }
 
 .sidebar a span:last-child {
-    padding-right: .6rem;
-    padding-left:12px;
+  padding-right: 0.6rem;
+  padding-left: 12px;
 }
 
-.dashboard-content{
-    /* min-height: 100vh; */
-    margin-left: 240px;
-    position: relative;
-    transition: margin-left 500ms;
+.dashboard-content {
+  /* min-height: 100vh; */
+  margin-left: 240px;
+  position: relative;
+  transition: margin-left 500ms;
 }
 
-header{
-    width:calc(100% - 240px);
-    height:60px;
-    top:0;
-    left:240px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding:0rem 1rem;
-    position: fixed;
-    z-index: var(--z-fixed);
-    background:var(--dashboard-header);
-    border-bottom: 1px solid var(--dashboard-header-sep);
-    transition: left 500ms;
+header {
+  width: calc(100% - 240px);
+  height: 60px;
+  top: 0;
+  left: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0rem 1rem;
+  position: fixed;
+  z-index: var(--z-fixed);
+  background: var(--dashboard-header);
+  border-bottom: 1px solid var(--dashboard-header-sep);
+  transition: left 500ms;
 }
 
-.search-container{
-    display: flex;
-    align-items: center;
+.search-container {
+  display: flex;
+  align-items: center;
 }
 
-.icons{
-    display: flex;
-    align-items: center;
+.icons {
+  display: flex;
+  align-items: center;
 }
 
 .icons span,
-.icons div{
-
-    margin-left: 1.2rem;
-
+.icons div {
+  margin-left: 1.2rem;
 }
 
 .icons div {
-    height:38px;
-    width:38px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../../../assets/img/citybg.jpg);
-    border-radius: 50%;
+  height: 38px;
+  width: 38px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/img/citybg.jpg);
+  border-radius: 50%;
 }
 
-.search-container input{
-    border:0;
-    outline: 0;
-    padding:1rem;
-    height:38px;
+.search-container input {
+  border: 0;
+  outline: 0;
+  padding: 1rem;
+  height: 38px;
 }
 
-main{
-    min-height: 100vh;
-    margin-top:60px;
-    padding:1rem 3.5rem;
-    background: var(--dashboard-background);
+main {
+  min-height: 100vh;
+  margin-top: 60px;
+  padding: 1rem 3.5rem;
+  background: var(--dashboard-background);
 }
 
 main p {
-    color:var(--dashboard-text);
+  color: var(--dashboard-text);
 }
 
-.title{
-    margin-bottom: 1.2rem;
-    font-weight: 500;
+.title {
+  margin-bottom: 1.2rem;
+  font-weight: 500;
 }
 
-.cards-section{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 4rem;
+.cards-section {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 4rem;
 }
 
-.card{
-    background: var(--dashboard-card);
-    border-radius: 2px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.3);
+.card {
+  background: var(--dashboard-card);
+  border-radius: 2px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-.card-body{
-    padding:1.8rem 2rem;
-    display: flex;
-    align-items: center;
-
+.card-body {
+  padding: 1.8rem 2rem;
+  display: flex;
+  align-items: center;
 }
 
-.card-body span{
-    font-size:4rem;
-    color:var(--dashboard-text);
-    padding-right:3rem;
+.card-body span {
+  font-size: 4rem;
+  color: var(--dashboard-text);
+  padding-right: 3rem;
 }
 
-.card-body h5{
-    color:var(--dashboard-text);
-    letter-spacing: .5px;
-    font-size: 2.4rem;
-    font-weight: 500;
+.card-body h5 {
+  color: var(--dashboard-text);
+  letter-spacing: 0.5px;
+  font-size: 2.4rem;
+  font-weight: 500;
 }
 
-.card-body h4{
-
-    margin-top:0.8rem;
-    font-weight: 500;    
+.card-body h4 {
+  margin-top: 0.8rem;
+  font-weight: 500;
 }
 
-.card-footer{
-    padding: .4rem 1.5rem;
-    
+.card-footer {
+  padding: 0.4rem 1.5rem;
 }
 
-.card-footer a{
-    color:var(--dashboard-main);
+.card-footer a {
+  color: var(--dashboard-main);
 }
 
-.payments{
-    margin-top:4rem;
-    margin-bottom:3rem;
+.payments {
+  margin-top: 4rem;
+  margin-bottom: 3rem;
 }
 
-.activity-grid{
-    display: grid;
-    grid-template-columns:  75% 25%;
-    grid-column-gap: 1.5rem;
+.activity-grid {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-column-gap: 1.5rem;
 }
 
 .payment-card,
 .info-card,
-.info-card-two{
-    /* background:rgb(216, 216, 216); */
-    border-radius: 2px;
-    /* box-shadow: 2px 2px 2px rgba(0,0,0,0.3); */
+.info-card-two {
+  /* background:rgb(216, 216, 216); */
+  border-radius: 2px;
+  /* box-shadow: 2px 2px 2px rgba(0,0,0,0.3); */
 }
 
-.payment-card h3{
-    color:var(--dashboard-text);
-    margin: 1rem;
-    font-weight: 500;
+.payment-card h3 {
+  color: var(--dashboard-text);
+  margin: 1rem;
+  font-weight: 500;
 }
 
-.payment-card table{
-    width:100%;
-    border-collapse: collapse;
+.payment-card table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .payment-card thead {
-
-    background:var(--dashboard-tablehead);
-    text-align: left;
-
+  background: var(--dashboard-tablehead);
+  text-align: left;
 }
 
-th, td {
-    font-size: 16px;
-    padding: 1.2rem 1.5rem;
-    color: var(--dashboard-text);
+th,
+td {
+  font-size: 16px;
+  padding: 1.2rem 1.5rem;
+  color: var(--dashboard-text);
 }
 
 td {
-    font-size: 16px;
+  font-size: 16px;
 }
 
-tbody tr:nth-child(even){
-    
+tbody tr:nth-child(even) {
 }
 
 .payment {
-    padding: .2rem 1rem;
-    border-radius: 20px;
-    /* color: var(--dashboard-main); */
-    font-weight: 700;
+  padding: 0.2rem 1rem;
+  border-radius: 20px;
+  /* color: var(--dashboard-main); */
+  font-weight: 700;
 }
 
-.payment.success{
-    background: #def7ec;
-    color: var(--dashboard-main)
+.payment.success {
+  background: #def7ec;
+  color: var(--dashboard-main);
 }
 
-.payment.warning{
-    background: #f0f6b2;
-    color: orange;
+.payment.warning {
+  background: #f0f6b2;
+  color: orange;
 }
 
 .image-1,
 .image-2,
-.image-3{
-    height:38px;
-    width:38px;
-    border-radius: 50%;
-    margin-left: -15px;
-    border:3px solid #efefef;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../../../assets/img/citybg.jpg);
-
+.image-3 {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+  margin-left: -15px;
+  border: 3px solid #efefef;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/img/citybg.jpg);
 }
 
-.images{
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
+.images {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
 }
 
-.info-card{
-    margin-bottom:1.5rem;
-    padding-top:.5rem;
-    padding-bottom:.5rem;
-
+.info-card {
+  margin-bottom: 1.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.info-single{
-    padding:.5rem 1rem;
-    display: flex;
-    align-items: center;
+.info-single {
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
 }
-.info-single span{
-
-    font-size: 3rem;
-    color:var(--dashboard-text);
-    padding-right:2rem;
-
+.info-single span {
+  font-size: 3rem;
+  color: var(--dashboard-text);
+  padding-right: 2rem;
 }
 
-.info-single h5{
-    color:var(--dashboard-main);
-    font-size: 2rem;
-    margin-bottom: .0rem !important;
+.info-single h5 {
+  color: var(--dashboard-main);
+  font-size: 2rem;
+  margin-bottom: 0rem !important;
 }
 
 .info-single small {
-    font-weight: 600;
-    color:var(--dashboard-text);
-    /* color:rgb(58, 58, 58); */
+  font-weight: 600;
+  color: var(--dashboard-text);
+  /* color:rgb(58, 58, 58); */
 }
 
-.info-flex{
+.info-flex {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.3rem;
+}
+
+.info-card-two {
+  padding: 1rem;
+}
+
+.card-two-img {
+  height: 60px;
+  width: 60px;
+  margin-right: 0.7rem;
+  border-radius: 50%;
+  border: 3px solid #efefef;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/img/citybg.jpg);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-center button {
+  background: var(--dashboard-main);
+  color: var(--dashboard-text);
+  border: 1px solid var(--dashboard-main);
+  border-radius: 4px;
+  padding: 0.4rem 1rem;
+}
+
+.info-card-two-content h5,
+small {
+  color: var(--dashboard-text);
+}
+
+.table-container {
+  overflow-x: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+  .sidebar {
+    width: 60px;
+    z-index: 999;
+  }
+
+  .dashboard-content {
+    margin-left: 60px;
+  }
+
+  .sidebar .sidebar-header h3 span,
+  .sidebar li span:last-child {
+    display: none;
+  }
+
+  .sidebar .sidebar-header,
+  .sidebar li {
     display: flex;
-    align-items: center;
-    margin-bottom: .3rem;
+    justify-content: center;
+  }
+
+  .dashboard-content header {
+    left: 60px;
+    width: calc(100% - 60px);
+  }
+
+  #sidebar-toggle:checked ~ .sidebar {
+    width: 60px;
+  }
+
+  #sidebar-toggle:checked ~ .dashboard-content {
+    margin-left: 60px;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+  #sidebar-toggle:checked ~ .sidebar li span:last-child {
+    display: inline;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar .sidebar-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #sidebar-toggle:checked ~ .sidebar li {
+    display: block;
+    justify-content: space-between;
+  }
+
+  #sidebar-toggle:checked ~ .dashboard-content header {
+    left: 60px;
+  }
 }
 
-.info-card-two{
-    padding:1rem;
+@media only screen and (max-width: 860px) {
+  .cards-section {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
+  .card {
+    margin-bottom: 1rem;
+  }
+
+  .activity-grid {
+    display: block;
+  }
+
+  .information {
+    margin-top: 1.5rem;
+  }
 }
 
-.card-two-img{
-    height:60px;
-    width:60px;
-    margin-right: .7rem;
-    border-radius: 50%;
-    border:3px solid #efefef;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../../../assets/img/citybg.jpg);
+@media only screen and (max-width: 600px) {
+  .cards-section {
+    grid-template-columns: 100%;
+  }
 }
 
-.text-center{
-    text-align: center;
-}
-
-.text-center button{
-    background:var(--dashboard-main);
-    color:#fff;
-    border: 1px solid var(--dashboard-main);
-    border-radius: 4px;
-    padding: .4rem 1rem;
-}
-
-.table-container{
-    overflow-x:auto;
-}
-
-@media only screen and (max-width:1200px){
-    .sidebar{
-        width: 60px;
-        z-index: 999;
-    }
-    
-    .dashboard-content{
-        margin-left: 60px;
-    }
-    
-    .sidebar .sidebar-header h3 span,
-    .sidebar li span:last-child{
-        display: none;
-    
-    }
-    
-    .sidebar .sidebar-header,
-    .sidebar li{
-        display: flex;
-        justify-content: center;
-    
-    }
-    
-    .dashboard-content header{
-        left: 60px;
-        width: calc(100% - 60px);
-    }
-
-    #sidebar-toggle:checked ~ .sidebar{
-        width: 60px;
-    }
-    
-    #sidebar-toggle:checked ~ .dashboard-content{
-        margin-left: 60px;
-    }
-    
-    #sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
-    #sidebar-toggle:checked ~ .sidebar li span:last-child{
-        display: inline;
-    
-    }
-    
-    #sidebar-toggle:checked ~ .sidebar .sidebar-header{
-        display: flex;
-        justify-content: space-between;
-    
-    }
-
-    #sidebar-toggle:checked ~ .sidebar li{
-        display: block;
-        justify-content: space-between;
-    
-    }
-    
-    #sidebar-toggle:checked ~ .dashboard-content header{
-        left: 60px;
-    }
-
-}
-
-@media only screen and (max-width: 860px){
-
-    .cards-section{
-        grid-template-columns: repeat(2, 1fr) ;
-        
-    }
-
-    .card{
-        margin-bottom: 1rem;
-    }
-
-    .activity-grid{
-        display: block;
-    }
-
-    .information{
-        margin-top: 1.5rem;
-    }
-
-}
-
-@media only screen and (max-width: 600px){
-
-    .cards-section{
-        grid-template-columns: 100%;
-        
-    }
-
-}
-
-@media only screen and (max-width: 450px){
-
-    main{
-        padding-left:1rem;
-        padding-right:1rem;
-    }
-
+@media only screen and (max-width: 450px) {
+  main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
