--- a/Frontend/easybank/src/app/components/settings/settings.component.css
+++ b/Frontend/easybank/src/app/components/settings/settings.component.css
@@ -1,56 +1,56 @@
-@import url('../login//login.component.css');
-@import url('../dashboard/dashboard.component.css');
+@import url("../login//login.component.css");
+@import url("../dashboard/dashboard.component.css");
 
-
-.settings-container{
-    max-width: 500px;
-    /* margin-left: auto;
+.settings-container {
+  max-width: 500px;
+  /* margin-left: auto;
     margin-right: auto; */
-    margin-top:2rem;
+  margin-top: 2rem;
 }
 
 .settings-container p {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
-main h2{
-
-    font-size: 2rem;
-    font-weight: 500;
-
+main h2 {
+  font-size: 2rem;
+  font-weight: 500;
 }
 
-.login-section h2, h5,h4{
-    margin-bottom: 1rem;
-    font-weight: 500;
+.login-section h2,
+h5,
+h4 {
+  margin-bottom: 1rem;
+  font-weight: 500;
 }
 
-.cards-section{
-    margin-bottom: 8rem;
+.cards-section {
+  margin-bottom: 8rem;
 }
 
-.card-body h5,h4{
-    font-weight: 500;
+.card-body h5,
+h4 {
+  font-weight: 500;
 }
 
 main h3 {
-    margin-bottom:2rem;
-    font-weight: 500;
+  margin-bottom: 2rem;
+  font-weight: 500;
 }
 
-form{
-    margin-bottom: 8rem;
+form {
+  margin-bottom: 8rem;
 }
 
-.input-container{
-    margin-bottom: 2rem;
+.input-container {
+  margin-bottom: 2rem;
 }
 
-.mat-form-field{
-    width:100%;
-    font-size: 14px;
+.mat-form-field {
+  width: 100%;
+  font-size: 14px;
 }
 
 .mat-form-field-appearance-outline .mat-form-field-infix {
-    padding: 0 0 0 0!important;
+  padding: 0 0 0 0 !important;
 }
