--- a/Frontend/easybank/src/app/components/transfer/transfer.component.css
+++ b/Frontend/easybank/src/app/components/transfer/transfer.component.css
@@ -1,110 +1,108 @@
-@import url('../dashboard/dashboard.component.css');
-@import url('../login//login.component.css');
+@import url("../dashboard/dashboard.component.css");
+@import url("../login//login.component.css");
 
-.payment-form-container{
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:5rem;
+.payment-form-container {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5rem;
 }
 
-.payment-form-container p{
-    font-size: 1.2rem;
-    padding:1rem;
-    margin-bottom: 1rem;
+.payment-form-container p {
+  font-size: 1.2rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 
-main h2{
-
-    font-size: 2rem;
-
+main h2 {
+  font-size: 2rem;
 }
 
 main h3 {
-    margin-bottom:2rem;
+  margin-bottom: 2rem;
 }
 
-form{
-    margin-bottom: 8rem;
+form {
+  margin-bottom: 8rem;
 }
 
-.input-container{
-    margin-bottom: 2rem;
+.input-container {
+  margin-bottom: 2rem;
 }
 
-.login-section{
-    margin-bottom: 20px;
+.login-section {
+  margin-bottom: 20px;
 }
 
-.mat-form-field{
-    width:100%;
-    font-size: 15px;
-    color:var(--dashboard-text);
+.mat-form-field {
+  width: 100%;
+  font-size: 15px;
+  color: var(--dashboard-text);
 }
 
-.mat-form-field input p{
-    color:var(--dashboard-text);
+.mat-form-field input p {
+  color: var(--dashboard-text);
 }
 
 .mat-form-field mat-label {
-    color:var(--dashboard-text);
-    border-color: var(--dashboard-text);
+  color: var(--dashboard-text);
+  border-color: var(--dashboard-text);
 }
 
-.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
-    color: #f44336;
+.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid
+  .mat-form-field-outline-thick {
+  color: #f44336;
 }
 
-.mat-form-field .mat-input-element{
-    color:var(--dashboard-text);
+.mat-form-field .mat-input-element {
+  color: var(--dashboard-text);
 }
 
-.mat-input-element::placeholder{
-    color:var(--dashboard-text);
+.mat-input-element::placeholder {
+  color: var(--dashboard-text);
 }
 
 .mat-form-field-appearance-outline .mat-form-field-outline {
-    color:var(--dashboard-text);
-    border-color: var(--dashboard-text);
+  color: var(--dashboard-text);
+  border-color: var(--dashboard-text);
 }
 
 .mat-form-field-appearance-outline .mat-form-field-outline-thick {
-    color:var(--dashboard-text);
-    border-color: var(--dashboard-text);
-
+  color: var(--dashboard-text);
+  border-color: var(--dashboard-text);
 }
 
 .input.mat-input-element {
-    color:var(--dashboard-text);
-    border-color: var(--dashboard-text);
-
+  color: var(--dashboard-text);
+  border-color: var(--dashboard-text);
 }
 
 /* default and hover color */
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    color:var(--dashboard-main);
+  color: var(--dashboard-main);
 }
 
 /* focused color */
-::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
-    color:var(--dashboard-text);
+::ng-deep
+  .mat-form-field-appearance-outline.mat-focused
+  .mat-form-field-outline-thick {
+  color: var(--dashboard-text);
 }
 
 /* floating label color */
-::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label { 
-    color:var(--dashboard-text); 
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label {
+  color: var(--dashboard-text);
 }
 
-::ng-deep .mat-tab-label{
-    color:var(--dashboard-text); 
+::ng-deep .mat-tab-label {
+  color: var(--dashboard-text);
 }
 
-
-.code-container{
-    display: flex;
-    justify-content: space-between;
+.code-container {
+  display: flex;
+  justify-content: space-between;
 }
 
-.mat-form-field.code{
-    width:45%;
+.mat-form-field.code {
+  width: 45%;
 }
