Cleaning Angular Code

--- a/Frontend/easybank/src/app/components/admin/admin.component.html
+++ b/Frontend/easybank/src/app/components/admin/admin.component.html
@@ -62,7 +62,7 @@
         </p>
 
         <p>Reset A/B Testing Results: </p>
-        <button class="admin-button">Reset Statistics</button>
+        <button class="admin-button" (click)="ResetResults()">Reset Statistics</button>
 
     
     </main>
