Cleaning Code & Documenting

--- a/Frontend/easybank/src/app/components/register/register.component.html
+++ b/Frontend/easybank/src/app/components/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="left">
         <section class="login-section">
             <h1>EasyBank</h1>
-            <p>adasd asd asd ada asdas dasda asd as d.</p>
+            <p>Secure Online Digital Banking</p>
 
         </section>
     </div>
@@ -12,7 +12,7 @@
             <section class="login-section">
                 <h2 class="signup-head">Sign Up</h2>
                 <div class="login-container">
-                    <p>Already have an account ? <a href="#">
+                    <p>Already have an account ? <a href="#" routerLink="/login">
                         <strong>Sign In</strong>
                     </a></p>
                 </div>
