--- a/Frontend/easybank/src/app/components/login/login.component.html
+++ b/Frontend/easybank/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="left">
         <section class="login-section">
             <h1>EasyBank</h1>
-            <p>adasd asd asd ada asdas dasda asd as d.</p>
+            <p>Secure Online Digital Banking</p>
 
         </section>
     </div>
@@ -14,7 +14,7 @@
             <section class="login-section">
                 <h2>Sign In</h2>
                 <div class="login-container">
-                    <p>Don't have an account ? <a href="#">
+                    <p>Don't have an account ? <a href="#" routerLink="/register">
                         <strong>Create Account</strong>
                     </a></p>
                 </div>
